fix(frontend): field spacing in fieldset group

--- a/packages/frontend/components/fieldset/styles.css
+++ b/packages/frontend/components/fieldset/styles.css
@@ -14,7 +14,7 @@
 .fieldset--group {
   --label-font: var(--font-fieldset-label);
 
-  & .field {
+  & * + .field {
     margin-block-start: var(--space-m);
   }
 }
